cau3/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    appication: webapp
  namespace: cau3
spec:
  replicas: 2
  selector:
    matchLabels:
      appication: webapp
  template:
    metadata:
      labels:
        appication: webapp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: webapp-port
      serviceAccountName: webapp-sa
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: cau3
spec:
  selector:
    appication: webapp
  ports:
  - name: nginx-service-port
    protocol: TCP
    port: 80
    targetPort: webapp-port
