cau3/default-deny-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cau3
spec:
  podSelector: 
    matchLabels:
      appication: webapp
  policyTypes: 
    - Ingress
